--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,11 @@ ul {
   display: inline-block;
   padding: 0 1rem;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 15px;
+}
+.rm-btn:hover {
+  color: var(--primary-700);
+  box-shadow: var(--shadow-3);
 }
 
 .btn {
@@ -164,106 +168,6 @@ ul {
 }
 .btn-block {
   width: 100%;
-}
-
-/* alerts */
-.alert {
-  padding: 0.375rem 0.75rem;
-  margin: 1rem 0;
-  border-color: transparent;
-  border-radius: var(--borderRadius);
-}
-
-.alert-danger {
-  color: var(--red-dark);
-  background: var(--red-light);
-}
-.alert-success {
-  color: var(--green-dark);
-  background: var(--green-light);
-}
-/* form */
-
-.form {
-  width: 90vw;
-  max-width: var(--fixed-width);
-  background: var(--white);
-  border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-2);
-  padding: 2rem 2.5rem;
-  margin: 3rem auto;
-}
-.form-label {
-  display: block;
-  font-size: var(--small-text);
-  margin-bottom: 0.5rem;
-  text-transform: capitalize;
-  letter-spacing: var(--letterSpacing);
-}
-.form-input,
-.form-textarea {
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  border-radius: var(--borderRadius);
-  background: var(--backgroundColor);
-  border: 1px solid var(--grey-200);
-}
-
-.form-row {
-  margin-bottom: 1rem;
-}
-
-.form-textarea {
-  height: 7rem;
-}
-::placeholder {
-  font-family: inherit;
-  color: var(--grey-400);
-}
-.form-alert {
-  color: var(--red-dark);
-  letter-spacing: var(--letterSpacing);
-  text-transform: capitalize;
-}
-/* extra styles */
-.form .form-label {
-  text-align: left;
-}
-.form .btn-block {
-  margin-top: 0.5rem;
-}
-
-/* alert */
-
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.loading {
-  width: 6rem;
-  height: 6rem;
-  border: 5px solid var(--grey-400);
-  border-radius: 50%;
-  border-top-color: var(--primary-500);
-  animation: spinner 0.6s linear infinite;
-}
-.loading {
-  margin: 0 auto;
-}
-/* title */
-
-.title {
-  text-align: center;
-}
-
-.title-underline {
-  background: var(--primary-500);
-  width: 7rem;
-  height: 0.25rem;
-  margin: 0 auto;
-  margin-top: -1rem;
 }
 
 .item {
@@ -297,64 +201,14 @@ ul {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   background: var(--white);
   padding: 1rem 2rem;
   border-radius: var(--borderRadius);
   text-align: left;
 }
-.users img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 1.5rem;
-}
-.users h5 {
-  margin-bottom: 0;
-}
+
 .users a {
-  color: var(--primary-500);
+  color: var(--grey-500);
   text-transform: capitalize;
-}
-
-.navbar {
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 2rem;
-  align-items: center;
-}
-.navbar h5 {
-  font-weight: bold;
-  margin-bottom: 0;
-}
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  max-width: 400px;
-}
-.nav-links {
-  display: flex;
-  gap: 1rem;
-}
-.nav-links a {
-  text-transform: capitalize;
-  color: var(--primary-500);
-  cursor: pointer;
-}
-.user-container {
-  display: flex;
-  gap: 1rem;
-}
-.user-container p {
-  margin-bottom: 0;
-}
-
-.user-container .btn {
-  font-size: 0.75rem;
-  letter-spacing: var(--letterSpacing);
-  padding: 0.15rem 0.5rem;
-  box-shadow: var(--shadow-1);
-  transition: var(--transition);
-  text-transform: capitalize;
-  display: inline-block;
 }
